--- a/lol.html
+++ b/lol.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>hey hey hey hey</title>
+    <title>ouhaergliuwrughauerh</title>
   </head>
   <body>
 
